Set rpath for plperl and plpython to ensure we can find the .so files for the languages even when not installed in a standard directory. pltcl may need this treatment as well, but we don't have the right path conveniently available, so I'll leave it alone as long as there aren't actual reports of trouble.

--- a/src/pl/plperl/GNUmakefile
+++ b/src/pl/plperl/GNUmakefile
@@ -25,6 +25,8 @@ endif
 
 override CPPFLAGS := -I$(srcdir) $(CPPFLAGS) -I$(perl_archlibexp)/CORE
 
+rpathdir = $(perl_archlibexp)/CORE
+
 
 NAME = plperl
 SO_MAJOR_VERSION = 0
