--- a/src/Makefile.shlib
+++ b/src/Makefile.shlib
@@ -257,9 +257,9 @@ endif # enable_shared
 
 all-lib: all-static-lib all-shared-lib
 
-all-static-lib: $(PTHREAD_H_WIN32) $(top_builddir)/src/port/pg_config_paths.h lib$(NAME).a
+all-static-lib: lib$(NAME).a
 
-all-shared-lib: $(PTHREAD_H_WIN32) $(top_builddir)/src/port/pg_config_paths.h $(shlib)
+all-shared-lib: $(shlib)
 
 ifndef LORDER
 MK_NO_LORDER := true
