Fix readline/libedit selection code to prefer readline over libedit reliably (ie, regardless of which libraries they depend on).  Also make sure that we don't select headers that obviously belong to the wrong one of the two libraries.  This was discussed back around 4-Sep but seems to have slipped through the cracks.  The header selection could be checked more closely, perhaps, but let's see if this is good enough.

--- a/configure.in
+++ b/configure.in
@@ -714,21 +714,34 @@ AC_CHECK_HEADERS(netinet/tcp.h, [], [],
 #endif
 ])
 
-if test "$with_readline" = yes; then
+if expr x"$pgac_cv_check_readline" : 'x-lreadline' >/dev/null ; then
   AC_CHECK_HEADERS(readline/readline.h, [],
-                   [AC_CHECK_HEADERS(editline/readline.h, [],
-                         [AC_CHECK_HEADERS(readline.h, [],
-                                     [AC_MSG_ERROR([readline header not found
+                   [AC_CHECK_HEADERS(readline.h, [],
+                                [AC_MSG_ERROR([readline header not found
 If you have readline already installed, see config.log for details on the
 failure.  It is possible the compiler isn't looking in the proper directory.
-Use --without-readline to disable readline support.])])])])
+Use --without-readline to disable readline support.])])])
   AC_CHECK_HEADERS(readline/history.h, [],
-                   [AC_CHECK_HEADERS(editline/history.h, [],
-                         [AC_CHECK_HEADERS(history.h, [],
-                                     [AC_MSG_ERROR([history header not found
+                   [AC_CHECK_HEADERS(history.h, [],
+                                [AC_MSG_ERROR([history header not found
 If you have readline already installed, see config.log for details on the
 failure.  It is possible the compiler isn't looking in the proper directory.
-Use --without-readline to disable readline support.])])])])
+Use --without-readline to disable readline support.])])])
+fi
+
+if expr x"$pgac_cv_check_readline" : 'x-ledit' >/dev/null ; then
+  AC_CHECK_HEADERS(editline/readline.h, [],
+                   [AC_CHECK_HEADERS(readline.h, [],
+                                [AC_MSG_ERROR([readline header not found
+If you have libedit already installed, see config.log for details on the
+failure.  It is possible the compiler isn't looking in the proper directory.
+Use --without-readline to disable libedit support.])])])
+  AC_CHECK_HEADERS(editline/history.h, [],
+                   [AC_CHECK_HEADERS(history.h, [],
+                                [AC_MSG_ERROR([history header not found
+If you have libedit already installed, see config.log for details on the
+failure.  It is possible the compiler isn't looking in the proper directory.
+Use --without-readline to disable libedit support.])])])
 fi
 
 if test "$with_zlib" = yes; then
